# django_first_app

./: pyproject.toml
django_first_app/: asgi.py  settings.py  urls.py  wsgi.py
olistbar/: admin.py  apps.py  models.py
olistbar/migrations/: 0001_initial.py  0002_auto_20210208_1735.py
