[tool.poetry]
name = "django_first_app"
version = "0.1.0"
description = ""
authors = ["ThiagoFiorelli <36682785+ThiagoFiorelli@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
